--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,19 @@ logs
 *.log
 npm-debug.log*
 
+
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+bld/
+[Bb]in/
+[Oo]bj/
+[Ll]og/
+
 # Runtime data
 pids
 *.pid
